--- a/PlatformJumper/core/build.gradle
+++ b/PlatformJumper/core/build.gradle
@@ -5,6 +5,7 @@ dependencies {
   api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
   implementation "com.github.tommyettinger:textratypist:1.1.0"
+  implementation "com.badlogicgames.gdx:gdx-freetype:1.13.1"
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
