--- a/PlatformJumper/core/build.gradle
+++ b/PlatformJumper/core/build.gradle
@@ -6,6 +6,8 @@ dependencies {
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
   implementation "com.github.tommyettinger:textratypist:1.1.0"
   implementation "com.badlogicgames.gdx:gdx-freetype:1.13.1"
+  implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
+
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
